--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -349,7 +349,11 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 /**************** Orderdetails ***************/
 /****************************************/
-
+#order {
+.list:last-child.card {
+    margin-bottom: 20px;
+}
+}
 .orderdetalis-wrap,
 .orderdetails-table {
 	.orderdetails-item {
@@ -379,22 +383,29 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	}
 }
 
-.orderdetalis-wrap{
+
+.orderdetalis-wrap {
 	background-color: #f77b55;
 	float: left; 
-	width: 60%;
+	width: 58%;
 	padding-top: 5px;
-}
-
-.orderdetails-table {
-	
-	float: left; 
-	width: 40%;
 	.orderdetails-item {
-		width: 60% !important;  
-		margin: 5px 0px 5px 33px !important; 
+		padding:2%; 
+		margin: 5px 0px 5px 15px !important; 
+		float: left; 
+		width: 40%;  
+		height: 60px; 
+		background-color: white;
+		position: relative;
+		.orderdetalis-foodName {
+			float:left; 
+		}
+		.orderdetalis-foodPrice {
+			float: left;
+		}
 	}
 }
+
 
 .left-buttons{
 	button {
@@ -415,3 +426,51 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		}
 	}
 }
+
+/* style */
+/*CSS for orders*/
+.header-order-h4 {
+	text-align: center;
+	padding: 5px;
+}
+.card, .list-inset {
+    overflow: hidden;
+    margin: 20px 5px;
+    border-radius: 2px;
+    /*background-color: #ffd47b;*/
+}
+#test {
+	padding: 4px !important;
+	font-size: 13px;
+}
+#order {
+	background-color:#ffd47b ;
+}
+#order-height{
+	min-height:100px;
+	position: relative;
+}
+
+/*#order-bar {
+	background-color: #fcc465
+}*/
+/*END CSS for orders*/
+/*CSS for STAFF*/
+#staff {
+	margin: 18px;
+	padding: 1px;
+}
+
+#staff-button {
+	margin: 20px;
+	text-align: center;
+	font-weight: bold;
+	padding: 15px;
+	padding-bottom: 5px;
+	background-color: #f77b55;
+	color: white;
+}
+#staff-content {
+	background-color: #49505a;
+}
+/*END STAFF*/
