--- a/www/templates/first.html
+++ b/www/templates/first.html
@@ -10,9 +10,11 @@
           	<a class="button button-calm "href="#login" style="width: 100px;">Log in</a>
           </div>
           <div style="float: left; width: 50%; text-align:center">
-          	<a class="button button-outline button-calm "  href="#sign-up"  style="width: 100px">Sign up</a>
+          	<a style="border-color: #50D8FF;
+    background: transparent;
+    color: #50D8FF;"class="button button-outline button-calm "  href="#sign-up"  style="width: 100px">Sign up</a>
         </div>
-          <a class="button icon icon-right ion-chevron-right" href="#home">Menu</a> 
+          
            <!-- <a class="button icon icon-right ion-chevron-right" href="#upload-image">upload image</a>  -->
         </div>
  </div>
