--- a/www/templates/orderDetail.html
+++ b/www/templates/orderDetail.html
@@ -24,7 +24,7 @@
 </ion-header-bar>
 <ion-content style="background-color:white;">
 
-  <div class="orderdetalis-wrap" >
+  <div class="orderdetalis-wrap" style="min-height:900px">
    <p id="menu-order-left" style="    padding-bottom: 2px;
     text-align: center;
     font-size: 20px;
