--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -9,11 +9,11 @@
         		</span>
         	</div>
         	<h1 class="title">My Restaurant</h1>
-        	<div class="buttons buttons-right header-item">
+        	<!-- <div class="buttons buttons-right header-item">
         		<span class="right-buttons">
           			<button class="button button-icon button-clear ion-ios-gear-outline button-right" ng-click="openPopover($event)"></button>
         		</span>
-      		</div>
+      		</div> -->
 		</ion-header-bar>
 			
 			<ion-content class="home-wrap">
