--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -55,7 +55,7 @@
             </label>
 
             <label class="item item-input">
-              <span class="input-label" style="background-color: #F77B55; text-align: center; color: white;width: 30%; padding-bottom: 1px; padding-top: 4px;"><img src="img/mail.png"></img>  </span>
+              <span class="input-label" style="background-color: #F77B55; text-align: center; color: white;width: 30%; padding-bottom: 1px; padding-top: 4px;"><img src="img/lock.png"></img>  </span>
               <input ng-model="newStaff.staffPassword" id="staffPassword" type="text"  style="padding-left: 10px;" placeholder="Password" required>
             </label>
 
